добавленя ссылка на GitHub проекта

--- a/popup.html
+++ b/popup.html
@@ -164,14 +164,22 @@
 <body>
   <div class="header">
     <div class="header-row">
-      <h1>AUS Code Dictionary VNPZ</h1>
+      <h1>AUS Code Dictionary</h1>
       <label class="switch">
         <input type="checkbox" id="extensionEnabled" checked>
         <span class="slider"></span>
       </label>
     </div>
-    <small>Надстройка для работы с кодами AUS.</small><br>
-    <small>Разработал: <a href="mailto:alex31kv@yandex.ru">Udovenya Alexander</a></small>
+    
+	<small>
+			<span>Разработал: </span>
+			<a href="mailto:alex31kv@yandex.ru" target="_blank" style="float: right;">Udovenya Alexander</a><br>
+			
+			<span>Надстройка для работы с кодами AUS.</span><br>
+			
+			<span>Проверить обновления: </span>
+			<a href="https://github.com/alex31kv/AUS-Code-Dictionary/releases/" target="_blank" style="float: right;">GitHub.com/alex31kv</a>
+	</small>
   </div>
   
   <div class="count-row">
