--- a/popup.html
+++ b/popup.html
@@ -159,6 +159,27 @@
       margin-left: auto;
       white-space: nowrap;
     }
+    /*стиль для интервала проверки */
+    .interval-group {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 8px;
+    }
+    .interval-group label {
+      margin-bottom: 0;
+      white-space: nowrap;
+    }
+    .interval-group input {
+      width: 93px;
+      text-align: right;
+    }
+	
+	.divider {
+    height: 1px;
+    background-color: #ddd;
+    margin: 8px 0;
+	}
   </style>
 </head>
 <body>
@@ -170,24 +191,26 @@
         <span class="slider"></span>
       </label>
     </div>
-    
 	<small>
-			<span>Разработал: </span>
-			<a href="mailto:alex31kv@yandex.ru" target="_blank" style="float: right;">Udovenya Alexander</a><br>
-			
-			<span>Надстройка для работы с кодами AUS.</span><br>
-			
-			<span>Проверить обновления: </span>
-			<a href="https://github.com/alex31kv/AUS-Code-Dictionary/releases/" target="_blank" style="float: right;">GitHub.com/alex31kv</a>
+		<span>Разработал: </span>
+		<a href="mailto:alex31kv@yandex.ru" target="_blank" style="float: right;">Udovenya Alexander</a><br>
+	</small>
+	<div class="divider"></div>
+	<small>
+		<span>Надстройка для работы с кодами AUS.</span><br>
+		<span>Проверить обновления: </span>
+		<a href="https://github.com/alex31kv/AUS-Code-Dictionary/releases/" target="_blank" style="float: right;">GitHub.com/alex31kv</a>
 	</small>
   </div>
+  <div class="divider"></div>
   
   <div class="count-row">
     <span>Кодов: <strong id="keyword-count">0</strong></span>
     <button id="clearCache">Перезагрузить</button>
   </div>
+  <div class="divider"></div>
   
-  <div class="form-group">
+  <div class="interval-group">
     <label for="checkInterval">Интервал проверки (мс):</label>
     <input type="number" id="checkInterval" min="1000" max="10000" step="500">
   </div>
@@ -214,22 +237,22 @@
   
   <div class="color-picker-group">
     <div class="color-picker">
-      <label for="popupTextColor">Текст подсказки:</label>
+      <label>Текст подсказки:</label>
       <input type="color" id="popupTextColor" value="#000000">
     </div>
     <div class="color-picker">
-      <label for="popupBgColor">Фон подсказки:</label>
+      <label>Фон подсказки:</label>
       <input type="color" id="popupBgColor" value="#ffffff">
     </div>
   </div>
   
   <div class="color-picker-group">
     <div class="color-picker">
-      <label for="highlightTextColor">Текст подсветки:</label>
+      <label>Текст подсветки:</label>
       <input type="color" id="highlightTextColor" value="#0066cc">
     </div>
     <div class="color-picker">
-      <label for="highlightBgColor">Фон подсветки:</label>
+      <label>Фон подсветки:</label>
       <input type="color" id="highlightBgColor" value="#ffffff">
       <div class="checkbox-group">
         <input type="checkbox" id="transparentBgCheckbox">
