--- a/popup.html
+++ b/popup.html
@@ -174,6 +174,12 @@
       width: 93px;
       text-align: right;
     }
+	.dictionary-selector {
+      margin-bottom: 8px;
+    }
+    .dictionary-selector select {
+      width: 100%;
+    }
 	
 	.divider {
     height: 1px;
@@ -204,6 +210,10 @@
   </div>
   <div class="divider"></div>
   
+  <div class="dictionary-selector">
+    <label for="dictionarySelect">Словарь:</label>
+    <select id="dictionarySelect"></select>
+  </div>
   <div class="count-row">
     <span>Кодов: <strong id="keyword-count">0</strong></span>
     <button id="clearCache">Перезагрузить</button>
